// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component closes other buttons with another clicked button 1`] = `
<ul>
  <li
    id={0}
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    id={1}
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    id={2}
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
  </li>
</ul>
`;

exports[`Accordion component closes same section if same button is clicked again 1`] = `
<ul>
  <li
    id={0}
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    id={1}
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    id={2}
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
  </li>
</ul>
`;

exports[`Accordion component opens any one clicked button 1`] = `
<ul>
  <li
    id={0}
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    id={1}
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
    <p>
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </p>
  </li>
  <li
    id={2}
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Accordion component renders empty when given no sections 1`] = `<ul />`;
